clusters/pathweb/ingress-traefik.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: traefik
